--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -18,7 +18,7 @@ marketing:
     site_type: Person
     local_business_type: ''
     org_name: ''
-    description: 'A highly-customizable Hugo academic resume theme powered by Wowchemy website builder.'
+    description: 'An academic website for Abigail Underwood.'
     twitter: 'wowchemy'
   analytics:
     google_analytics: 'G-TLTNJ30TP5'
